LPD-53989 - Use the sticky-top utility class to avoid hardcoding the z-index.

--- a/modules/apps/site-initializer/site-initializer-cms/src/main/resources/site-initializer/fragments/group/cms/fragments/sidebar/index.css
+++ b/modules/apps/site-initializer/site-initializer-cms/src/main/resources/site-initializer/fragments/group/cms/fragments/sidebar/index.css
@@ -1,12 +1,9 @@
-.page-bar {
-	position: sticky;
+.top-bar {
 	top: var(--control-menu-container-height);
-	z-index: 1000;
-
 }
 
 @media (max-width: 575px) {
-	.page-bar {
+	.top-bar {
 		position: static;
 	}
 }
